# hackasat-final-2020

./: README.md
OnOrbitChallengeEvalTools/: README.txt  mission_plan_submission_template.txt  sample_mission_plan_submission.txt
OnOrbitChallengeEvalTools/pythonSrc/: defconWrapper.py  evaluationScript.py  mission_plan_parser.py  (+1 more)
cdh_rev1/: .gitignore  ztec_project.xpr
finals-challenge-0/: .gitignore  README.md  install.sh  make-clean.sql  solution-part1.py
finals-challenge-3/: Makefile  compress.c  gdb.txt  patch.py  readme.md
finals-challenge-5/: .gitignore  Makefile  README.md  startscript.sh
finals_cfs_build_example/: README.md
flatsat_openmsp430/: README.md
groundstation_rf/: README.md
gs_udp_radio_bridge/: README.md  bridge.py  client.py  defines.py  helpers.py  loss.py  observer.py  radio.py  sat_cmds.py  settings_common.py  test_bridge.py  test_team.py
opensatkit/: .gitignore  README.md
opensatkit/cfs/apps/ephem/: CMakeLists.txt
opensatkit/cfs/apps/ephem/fsw/mission_inc/: ephem_mission_cfg.h
opensatkit/cfs/apps/ephem/fsw/platform_inc/: ephem_msgids.h  ephem_perfids.h  ephem_platform_cfg.h
opensatkit/cfs/apps/ephem/fsw/src/: SGP4.c  SGP4.h  TLE.c  TLE.h  app_cfg.h  ephem_app.c  ephem_app.h  exobj.c  exobj.h
rtems5_tools_teams/: 0001-Added-Mem-Unaligned-Trap-handler.patch  Dockerfile  README.md
slack-export/: finals-1064cbread.txt  finals-15fittytree.txt  finals-2020.txt  finals-addvulcan.txt  finals-fluxrepeatrocket.txt  finals-pfs.txt  finals-poland-can-into-space.txt  finals-samurai.txt  finals-solarwine.txt
solvers/: README.md
(+1258 files in other folders)
